@@ -3,6 +3,10 @@
 	* src/check_config.c:
 	Add comment header for Addr_Info.
 	Fix typo in comment.
+	(AI_PASSIVE): New constant.
+	(AI_CANONNAME): New constant.
+	(AI_NUMERICHOST): New constant.
+	Add pragma Linker_Options for Win32 platform.
 
 2004-09-14  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
